--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">YouJiGom</string>
     <string name="logout">LogOut</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="channel_name">messagepush</string>
+    <string name="channel_description">메시지 푸쉬</string>
 </resources>
